--- a/views/gameroom.html
+++ b/views/gameroom.html
@@ -1,2 +1,9 @@
 <html>
+  <head>
+  <title>Modia - Game Room</title>
+    <script src="./javascripts/jquery.min.js"></script>
+    <script src="http://192.168.5.38:3000/socket.io/socket.io.js"></script>
+  </head>
+  <body>
+  </body>
 </html>
